Bug 1300421 - Back out 4 csets from bug 1288760 for regressing event coordinate reporting. r=jfkthame a=gchang

MozReview-Commit-ID: AJ2PkSfYCpv