widget/ScreenProxy.cpp
@@ -21,7 +21,6 @@ static NS_DEFINE_CID(kAppShellCID, NS_APPSHELL_CID);
 
 ScreenProxy::ScreenProxy(nsScreenManagerProxy* aScreenManager, ScreenDetails aDetails)
   : mContentsScaleFactor(0)
-  , mDefaultCSSScaleFactor(0)
   , mScreenManager(aScreenManager)
   , mId(0)
   , mPixelDepth(0)
@@ -129,28 +128,6 @@ ScreenProxy::GetColorDepth(int32_t *aColorDepth)
   return NS_OK;
 }
 
-NS_IMETHODIMP
-ScreenProxy::GetContentsScaleFactor(double* aContentsScaleFactor)
-{
-  if (!EnsureCacheIsValid()) {
-    return NS_ERROR_FAILURE;
-  }
-
-  *aContentsScaleFactor = mContentsScaleFactor;
-  return NS_OK;
-}
-
-NS_IMETHODIMP
-ScreenProxy::GetDefaultCSSScaleFactor(double* aScaleFactor)
-{
-  if (!EnsureCacheIsValid()) {
-    return NS_ERROR_FAILURE;
-  }
-
-  *aScaleFactor = mDefaultCSSScaleFactor;
-  return NS_OK;
-}
-
 void
 ScreenProxy::PopulateByDetails(ScreenDetails aDetails)
 {
@@ -162,7 +139,6 @@ ScreenProxy::PopulateByDetails(ScreenDetails aDetails)
   mPixelDepth = aDetails.pixelDepth();
   mColorDepth = aDetails.colorDepth();
   mContentsScaleFactor = aDetails.contentsScaleFactor();
-  mDefaultCSSScaleFactor = aDetails.defaultCSSScaleFactor();
 }
 
 bool
