widget/nsBaseWidget.cpp
@@ -1918,7 +1918,7 @@ nsBaseWidget::StartAsyncScrollbarDrag(const AsyncDragMetrics& aDragMetrics)
 }
 
 already_AddRefed<nsIScreen>
-nsIWidget::GetWidgetScreen()
+nsBaseWidget::GetWidgetScreen()
 {
   nsCOMPtr<nsIScreenManager> screenManager;
   screenManager = do_GetService("@mozilla.org/gfx/screenmanager;1");
